migrate dockerfile to eclipse-temurin 18, ci/cd to circle-ci